--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Hello, world!</title>
+    <title>LA.ME.P. SNC - Lavorazioni metalliche</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>LA.ME.P. SNC</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
